# kleckrelay-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  EmailHandler.Dockerfile  Maid.Dockerfile  README.md  Server.Dockerfile  alembic.ini  docker-compose.yaml  email_handler.py  emailhandler-entrypoint.sh  maid-jobs.txt  maid.py  main.py  pyproject.toml  server-entrypoint.sh  setup-postfix.sh
.github/workflows/: docker.yaml  test.yaml
alembic/: env.py
alembic/versions/: 052c520f18a8_.py  053543ea5935_.py  258fe4c44670_.py  264062a5b1ad_.py  298d6a4e0d71_.py  35d356a3a079_.py  370a1dd8ba23_.py  (+19 more)
app/: constant_keys.py  constants.py  cron_report_builder.py  default_life_constants.py  default_live_constants.py  doctor.py  email_report_data.py  gpg_handler.py  life_constants.py  logger.py  logging.py  main.py  utils.py
assets/: footers.json  trackers.json  url-shorteners.json
email_utils/: _get_root_dir.py  bounce_messages.py  content_handler.py  create_email_report.py  dkim_signature.py  errors.py  formatters.py  handle_local_to_outside.py  handle_outside_to_local.py  handler.py  handlers.py  headers.py  html_handler.py  image_proxy.py  proxy_images.py  sanitizers.py  send_mail.py  status.py  template_renderer.py  trackers_handler.py  utils.py  validators.py  web_key_discovery.py
explorative_tests/: image_tracker_url.html  img.html  outside_image.html  proxy_images.html  shortened_url.html  shortened_url_recursive.html  single_width_image.html
maid_utils/: image_proxy.py
tests/: __init__.py  conftest.py  helpers.py  test_alias.py  test_api_authentication.py  test_api_key.py  test_authentication.py  test_database.py  test_email_handler.py  test_email_html_handler.py  test_i18n.py  test_image_proxy.py  test_otp.py  test_otp_authentication.py  test_otp_setup.py  test_pgp.py  test_preferences.py  test_reserved_alias.py  test_statistics.py  test_trackers_handler.py
(+149 files in other folders)
