[tool.poetry]
name = "mail_test"
version = "0.1.0"
description = ""
authors = ["Myzel394 <50424412+Myzel394@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiosmtpd = "^1.4.2"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
pytesseract = "^0.3.10"
SQLAlchemy = "^1.4.41"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.5"}
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
fastapi-jwt = "^0.1.8"
email-normalize = "^2.0.0"
argon2-cffi = "^21.3.0"
requests = "^2.28.1"
pyquery = "^1.4.3"
pretty-bad-protocol = "^3.1.1"
cssutils = "^2.6.0"
fastapi-pagination = "^0.10.0"
SQLAlchemy-Utils = "^0.38.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
