[tool.poetry]
name = "mail_test"
version = "0.1.0"
description = ""
authors = ["Myzel394 <50424412+Myzel394@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiosmtpd = "^1.4.2"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
Jinja2 = "^3.1.2"
pytesseract = "^0.3.10"
SQLAlchemy = "^1.4.41"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.1.5"}
alembic = "^1.8.1"
psycopg2 = "^2.9.3"
fastapi-jwt = "^0.1.8"
email-normalize = "^2.0.0"
argon2-cffi = "^21.3.0"
requests = "^2.28.1"
pyquery = "^1.4.3"
pretty-bad-protocol = "^3.1.1"
cssutils = "^2.6.0"
fastapi-pagination = "^0.11.4"
SQLAlchemy-Utils = "^0.38.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.21.0"
dkimpy = "^1.0.5"
pyotp = "^2.8.0"
python-i18n = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-asyncio = "^0.20.3"
fastapi = {extras = ["all"], version = "^0.92.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
